--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "description": "pratice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix mern && npm run build --prefix mern"
+    "start": "nodemon app.js"
   },
   "author": "Syed burhan",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "hbs": "^4.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
+    "stripe": "^8.195.0",
     "validator": "^13.6.0"
   }
 }
