--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "pratice",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node src/app.js"
   },
   "author": "Syed burhan",
   "license": "ISC",
