--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "pratice",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
+  "engines": {
+    "node": "8.9.2"
+},
   "author": "Syed burhan",
   "license": "ISC",
   "dependencies": {
