--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "pratice",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node app.js",
     "heroku-postbuild": "cd mern && npm install --only=dev && npm install && npm run build"
   },
   "engines": {
