--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "description": "pratice",
   "main": "index.js",
   "scripts": {
-        "build": "cd mern && npm run build",
-        "install-mern": "cd client && npm install",
-        "heroku-postbuild": "npm run install-client && npm run build",
-        "server": "nodemon app.js",
-        "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
-        "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\""
-   
+    "start": "nodemon app.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install--prefix client && npm run build --prefix client"
   },
   "engines": {
     "node": "10.16.0"
