--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "pratice",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install--prefix client && npm run build --prefix client"
-  },
+    "start": "node app.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+},
   "engines": {
-    "node": "10.16.0"
+    "node": "8.9.2"
 },
   "author": "Syed burhan",
   "license": "ISC",
